--- a/src/components/Column.css
+++ b/src/components/Column.css
@@ -9,13 +9,13 @@
   padding: 0.25rem;
 }
 
-.titleWrapper{
+.titleWrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.titleWrapper button{
+.titleWrapper button {
   all: unset;
   color: #000;
   background: #fff;
@@ -24,7 +24,31 @@
   height: fit-content;
   cursor: pointer;
 }
-.titleWrapper button:hover{
+.titleWrapper button:hover {
   background: var(--COLOR-GRAY-LIGHT);
   transition: all 0.3s;
+}
+
+.Modal {
+  position: absolute;
+  background: rgba(0, 0, 0, 0.3);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.modalContent {
+  background: #fff;
+  position: absolute;
+  z-index: 1;
+  padding: 1rem;
+  height: 5rem;
+  width: 20rem;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
