--- a/src/components/Column.css
+++ b/src/components/Column.css
@@ -7,6 +7,7 @@
   margin: 0 0.5rem;
   border-radius: 4px;
   padding: 0.25rem;
+  border: dashed transparent 4px;
 }
 
 .titleWrapper {
@@ -52,3 +53,6 @@
   justify-content: center;
   align-items: center;
 }
+
+.column.drop {
+border-color: white;}
